--- a/index.html
+++ b/index.html
@@ -39,8 +39,14 @@
 	<main>
 		<section id="background">
 			<h2>Background</h2>
-			<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, blanditiis expedita? Earum eligendi pariatur quaerat
-				quos expedita ab quibusdam ratione veniam in, mollitia fuga repudiandae?</p>
+			<p>Food Bank Australia (FBA) is a food relief charity organisation that provides 77 million meals a year to Australians in need. Approximately one in five Australians have experienced food insecurity at some point in the last 12 months. Food insecurity is prevalent across the country and refers to when an individual doesn’t have enough food for themselves or their family and cannot afford to buy more food. 
+      </p>
+      <p>
+      Food Bank Australia works with a dedicated network of farmers, manufacturers, retailers and transport services to provide fresh food to those in need. They are not only involved with combating hunger FBA are heavily in bettering the nation. This is done through various educational programs in schools as well as committing to resolve the 20 billion dollar food waste problem in Australia. 
+      </p>
+      <p>
+      FBA relies heavily on volunteer labour to pick, pack and distribute food around the country. Despite their best efforts, many still unfortunately go hungry and FBA continues to strive to reach the objective of eliminating food insecurity in Australia.
+      </p>
 			<h3 id="research">Research</h3>
 			<p>Optio qui, omnis itaque rerum iusto molestiae necessitatibus deleniti quod tenetur id perspiciatis voluptatum dolorum
 				quisquam eius ipsum non architecto labore! Distinctio, tenetur. Officiis, necessitatibus?</p>
