--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<header>
-		<h1>[Food Bank Australia] Website Proposal</h1>
+		<h1>Food Bank Australia Website Proposal</h1>
 	</header>
 
 	<!-- NAVIGATION: Add your own list item links based on secion IDs and heading elements -->
@@ -102,7 +102,7 @@
 
   <!-- FOOTER: Update with your details --> 
 	<footer>
-		[Your Name] - [Your Student ID]
+		Abdul Aziz Jebara - ajeb4078 - 470 391 671 
 	</footer>
 	</script>
 </body>
